      you do not want to cite anything.

    - There's a new function ~mu4e-compose-wide-reply~ (bound to =W=) which does a
      wide-reply, a.k.a., 'reply to all'. So ~mu4e-compose-reply-recipients~ is
      not needed anymore and has been obsoleted (and doesn't do anything).
      ~mu4e-compose-reply-ignore-address~ is no longer supported, use
      ~message-prune-recipient-rules~ instead.

    - The special mailing list handling is gone; ~mu4e-compose-reply~ and
      ~mu4e-compose-wide-reply~ should take care of that. There's also
      ~message-reply-to-function~ for ultimate control; see [[info:(message)
      Reply][info (message) Reply]] for details.

    - ~mu4e-compose-in-new-frame~ has been generalized (in a backward-compatible
      way) to ~mu4e-compose-switch~, which lets you decide whether a message
      should be composed in the current window (default), a new window or a new
      frame.

    - ~mu4e-compose-context-switch~ is gone; it was a little too fragile. Best
      change when creating the message (=mu4e= asks you by default, see
      ~mu4e-compose-context-policy~).

    - iCalendar support is a work-in-progress with the new editor. One change is
      that support is now _automatically_ available.

**** other


    - New command ~mu4e-search-query~ (bound to =c=) which lets you pick a query
      (from bookmark / maildir shortcuts) with completion in main / headers /
      view buffers.

    - improved support for dealing with attachments and other MIME-parts in the
      message view; they gained completions support with annotations in the
      minibuffer

      It is possible to save all attachments at once with =C-c C-a=, except with
      Helm, which uses its own mechanism for this. This same has been extended
      to the MIME-part actions.

    - experimental: support folding message threads (with =TAB= / =S-TAB=). See the
      [[info:mu4e:Folding threads][entry in the Mu4e manual]] for further details.
